# big-primes

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
speedtest/: CMakeLists.txt  test_lucas_primality.cpp  test_lucas_primality.h  test_miller_ryabin.cpp  test_miller_ryabin.h  test_pollard_rho.cpp  test_quadratic_sieve.cpp  test_trial_division.cpp  tests.cpp  tests.h
src/: defines.h  main.cpp  main.h  math_functions.cpp  math_functions.h  pollard-rho.cpp  pollard-rho.h  print_functions.cpp  print_functions.h  strong_pseudoprime_test.cpp  strong_pseudoprime_test.h  test_for_primality.cpp  test_for_primality.h  trial_division.cpp  trial_division.h
src/qs/: congruences.cpp  congruences.h  linear_algebra.cpp  linear_algebra.h  quadratic_sieve.cpp  quadratic_sieve.h
tests/: CMakeLists.txt  test_miller_ryabin.cpp  test_miller_ryabin.h  test_pollard_rho.cpp  test_quadratic_sieve.cpp  test_trial_division.cpp  tests.cpp  tests.h
tests/functest/: CMakeLists.txt  test_lucas.cpp  test_miller_ryabin.cpp  test_pollard_rho.cpp  test_quadratic_sieve.cpp  test_trial_division.cpp
tests/speedtest/: CMakeLists.txt  test_lucas_primality.cpp  test_miller_ryabin.cpp  test_pollard_rho.cpp  test_pollard_rho.h  test_quadratic_sieve.cpp  test_quadratic_sieve.h  test_trial_division.cpp  test_trial_division.h  tests.cpp  tests.h
